# vscode_projects

./: README.md  buildC++.md  compile_cmds.txt
Lesson11/: CMakeLists.txt  main(orig).cpp  main.cpp
Lesson15/: CMakeLists.txt  compose-XDE.py  main.cpp  readme.md
Lesson15_plus_root/: CMakeLists.txt  compose_plus_root.py  main.cpp  readme.md
Lesson1_OCC/: CMakeLists.txt  main.cpp  readme.txt
Lesson2_OCC/: CMakeLists.txt  main.cpp
Lesson4_OCC/: CMakeLists.txt  Viewer.cpp  Viewer.h  ViewerInteractor.cpp  ViewerInteractor.h
OCC23950/: CMakeLists.txt  main.cpp
complete_guide/ch11/: Cutline  Cutline2.cpp  passw  passw.cpp  passw1.cpp  passw1.h
complete_guide/ch4/: sample1  sample1.cpp  sample2  sample2.cpp  sample3  sample3.cpp  sample4  sample4.cpp  tempCodeRunnerFile.cpp
complete_guide/ch7/: ball2  ball2.cpp  lines  lines.cpp  myMacros.h  sinetable  sinetable.cpp
complete_guide/ch_1/: ex_1  ex_1.cpp  ex_2  ex_2.cpp  ex_3  ex_3.cpp
complete_guide/ch_2/: ex2  ex2.cpp  ex3.cpp  ex4  ex4.cpp  ex_1  ex_1.cpp  sample  sample.cpp  sample0  sample0.cpp  sample2  sample2.cpp  sample3  sample3.cpp  sample_integers  sample_integers.cpp
complete_guide/ch_3/: ex1  ex1.cpp  ex2  ex2.cpp  ex3  ex3.cpp  sample1  sample1.cpp  sample2  sample2.cpp  sample3  sample3.cpp  tempCodeRunnerFile.cpp
course_project/basics_level_1/: arrays  arrays.cpp  exercise_1  exercise_1.cpp  exercise_2  exercise_2.cpp  exercise_3  exercise_3.cpp  hello  hello.cpp  user_input
course_project/basics_level_2/: exercise_1  exercise_1.cpp  exercise_2  exercise_2.cpp  exercise_3  exercise_3.cpp  exercise_4  exercise_4.cpp  functions  functions.cpp
course_project/basics_level_3/: arrays_loops  arrays_loops.cpp  exercise_1  exercise_1.cpp  exercise_2  exercise_2.cpp  exercise_3  exercise_3.cpp  main  main.cpp
course_project/basics_level_4/: exercise_1  exercise_1.cpp  exercise_2  exercise_2.cpp  main  main.cpp  my_client  my_client.cpp  my_computations.cpp  my_computations.hpp  my_vector_functions.cpp  my_vector_functions.hpp  prototypes  prototypes.cpp
hello/: CMakeLists.txt
lesson18_OCC/: cmdMisc.cpp
load_step_under_top/: CMakeLists.txt  load_step_under_top.py  main.cpp
load_step_under_top_fixed/: load_step_under_top_fixed.py  main.cpp
open_xbf/: CMakeLists.txt  main.cpp
open_xbf/models/: as1-oc-214.xbf  as1-oc-214.xml  as1_pe_203.xbf
sdlfoo/C++Tutorial_series/: tut01  tut02  tut02.cpp  tut03  tut03.cpp  tut04  tut04.cpp  tut05  tut05.cpp  tut06  tut06.cpp  tut07  tut07.cpp
sdlfoo/C_Tutorial_series/: episode6a.c  episode8  episode8.c  episode8ptrs  episode8ptrs.c  simple_ball.c  simple_square
sdlfoo/SDL_HelloWorld/: sdl_hw  sdl_hw.cpp
sdlfoo/bouncy_ball/: BouncyBall.h  ball.cpp  ball1.cpp  bb_1  bb_10
sdlfoo/misc/: BouncyBall.cpp  ball0  ball0.cpp  ballb  simple_ball  simple_ball.cpp
sdlfoo/screensaver-app/: README.md  a.out  application.cpp  application.h  ball.cpp  ball.h  main.cpp
tewfiq/: CylinderObject.cpp  Main.cpp  MultiBallColl
the_c++_project/Functions2/: byReference  byReference.cpp  byValue  byValue.cpp  passPointer  passPointer.cpp
the_c++_project/PointsDistance/: CMakeLists.txt
the_c++_project/PointsDistance/src/: Main.cpp  Point.cpp  Point.h
the_c++_project/concurrency/: multi_thrd  multi_thrd.cpp  one_thrd  one_thrd.cpp  practice4  practice4.cpp  thrds  thrds.cpp  thrds_g4g  thrds_geeks4geeks.cpp  thrds_w_args.cpp  threadsManage  threds_w_args
